// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddThread component renders AddThread by default 1`] = `
<form
  className="Thread"
  onSubmit={[Function]}
>
  <div
    className="addThread"
  >
    <div
      className="addTitle"
    >
      <Textarea
        aria-label="Thread Title..."
        cols="30"
        id="title"
        name="title"
        placeholder="Thread Title.."
        required={true}
        rows="2"
      />
    </div>
    <div
      className="addContent"
    >
      <Textarea
        aria-label="Type your thread..."
        cols="30"
        id="content"
        name="content"
        placeholder="Type your thread.."
        required={true}
        rows="4"
      />
    </div>
  </div>
  <Button
    className="postThreadBtn"
    type="submit"
  >
    Post Thread
  </Button>
</form>
`;

exports[`AddThread component renders the UI for AddThread as expected 1`] = `
<form
  className="Thread"
  onSubmit={[Function]}
>
  <div
    className="addThread"
  >
    <div
      className="addTitle"
    >
      <textarea
        aria-label="Thread Title..."
        className="Textarea "
        cols="30"
        id="title"
        name="title"
        placeholder="Thread Title.."
        required={true}
        rows="2"
      />
    </div>
    <div
      className="addContent"
    >
      <textarea
        aria-label="Type your thread..."
        className="Textarea "
        cols="30"
        id="content"
        name="content"
        placeholder="Type your thread.."
        required={true}
        rows="4"
      />
    </div>
  </div>
  <button
    className="Button postThreadBtn"
    type="submit"
  >
    Post Thread
  </button>
</form>
`;

exports[`Header component renders Header by default 1`] = `
<div
  className="header"
>
  <div
    className="headerTop"
  >
    <img
      alt="Pokemon GO forum"
      className="banner"
      src="go-banner.png"
    />
    <div
      className="loginNav"
    >
      <div
        className="title"
      >
        Pokemon GO Forum
      </div>
      <div
        className="login-button"
      >
        <div
          className="Header__not-logged-in"
        >
          <Link
            className="register-button"
            to="/register"
          >
            Register
          </Link>
           - 
          <Link
            className="login-button"
            to="/login"
          >
            Log in
          </Link>
        </div>
      </div>
    </div>
  </div>
  <nav
    className="navBar"
  />
</div>
`;

exports[`Header component renders the UI for Header as expected 1`] = `
<div
  className="header"
>
  <div
    className="headerTop"
  >
    <img
      alt="Pokemon GO forum"
      className="banner"
      src="go-banner.png"
    />
    <div
      className="loginNav"
    >
      <div
        className="title"
      >
        Pokemon GO Forum
      </div>
      <div
        className="login-button"
      >
        <div
          className="Header__not-logged-in"
        >
          <a
            className="register-button"
            href="/register"
            onClick={[Function]}
          >
            Register
          </a>
           - 
          <a
            className="login-button"
            href="/login"
            onClick={[Function]}
          >
            Log in
          </a>
        </div>
      </div>
    </div>
  </div>
  <nav
    className="navBar"
  />
</div>
`;

exports[`Messages component renders the UI for Header as expected 1`] = `
<div
  className="header"
>
  <div
    className="headerTop"
  >
    <img
      alt="Pokemon GO forum"
      className="banner"
      src="go-banner.png"
    />
    <div
      className="loginNav"
    >
      <div
        className="title"
      >
        Pokemon GO Forum
      </div>
      <div
        className="login-button"
      >
        <div
          className="Header__not-logged-in"
        >
          <a
            className="register-button"
            href="/register"
            onClick={[Function]}
          >
            Register
          </a>
           - 
          <a
            className="login-button"
            href="/login"
            onClick={[Function]}
          >
            Log in
          </a>
        </div>
      </div>
    </div>
  </div>
  <nav
    className="navBar"
  />
</div>
`;

exports[`ThreadList component renders ThreadList by default 1`] = `
<div
  className="threadList"
>
  <div
    className="threadBar"
  >
    <Link
      className="threadTitle"
      to="/topic/undefined/undefined"
    />
  </div>
  <div
    className="threadContent"
  />
  <div
    className="threadTime"
  >
    March 22nd 2020, 10:55:59 pm
  </div>
  <div
    className="CountLike"
  >
    <p>
      Comments: 
    </p>
  </div>
  <hr />
</div>
`;

exports[`ThreadList component renders the UI for ThreadList as expected 1`] = `
<div
  className="threadList"
>
  <div
    className="threadBar"
  >
    <a
      className="threadTitle"
      href="/topic/undefined/undefined"
      onClick={[Function]}
    />
  </div>
  <div
    className="threadContent"
  />
  <div
    className="threadTime"
  >
    March 22nd 2020, 10:55:59 pm
  </div>
  <div
    className="CountLike"
  >
    <p>
      Comments: 
    </p>
  </div>
  <hr />
</div>
`;

exports[`ThreadListMain component renders ThreadListMain without crashing 1`] = `
<div
  className="header"
>
  <div
    className="headerTop"
  >
    <img
      alt="Pokemon GO forum"
      className="banner"
      src="go-banner.png"
    />
    <div
      className="loginNav"
    >
      <div
        className="title"
      >
        Pokemon GO Forum
      </div>
      <div
        className="login-button"
      >
        <div
          className="Header__not-logged-in"
        >
          <Link
            className="register-button"
            to="/register"
          >
            Register
          </Link>
           - 
          <Link
            className="login-button"
            to="/login"
          >
            Log in
          </Link>
        </div>
      </div>
    </div>
  </div>
  <nav
    className="navBar"
  />
</div>
`;

exports[`TopicList component renders Header by default 1`] = `
<div
  className="topicNav"
>
  <nav
    role="navigation"
  >
    <ul
      className="topicNav_List"
    >
      <div
        className="topicNameBar"
      >
        <Link
          className="topicNames"
          to="/topic/undefined"
        >
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon="folder"
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
           
        </Link>
      </div>
      <p
        className="topicContent"
      />
      <p
        className="countThread"
      >
        Threads: 
      </p>
    </ul>
  </nav>
  <hr />
</div>
`;

exports[`TopicList component renders TopicList by default 1`] = `
<div
  className="topicNav"
>
  <nav
    role="navigation"
  >
    <ul
      className="topicNav_List"
    >
      <div
        className="topicNameBar"
      >
        <Link
          className="topicNames"
          to="/topic/undefined"
        >
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon="folder"
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
           
        </Link>
      </div>
      <p
        className="topicContent"
      />
      <p
        className="countThread"
      >
        Threads: 
      </p>
    </ul>
  </nav>
  <hr />
</div>
`;

exports[`TopicList component renders the UI for Header as expected 1`] = `
<div
  className="topicNav"
>
  <nav
    role="navigation"
  >
    <ul
      className="topicNav_List"
    >
      <div
        className="topicNameBar"
      >
        <a
          className="topicNames"
          href="/topic/undefined"
          onClick={[Function]}
        >
           
        </a>
      </div>
      <p
        className="topicContent"
      />
      <p
        className="countThread"
      >
        Threads: 
      </p>
    </ul>
  </nav>
  <hr />
</div>
`;

exports[`TopicList component renders the UI for TopicList as expected 1`] = `
<div
  className="topicNav"
>
  <nav
    role="navigation"
  >
    <ul
      className="topicNav_List"
    >
      <div
        className="topicNameBar"
      >
        <a
          className="topicNames"
          href="/topic/undefined"
          onClick={[Function]}
        >
           
        </a>
      </div>
      <p
        className="topicContent"
      />
      <p
        className="countThread"
      >
        Threads: 
      </p>
    </ul>
  </nav>
  <hr />
</div>
`;

exports[`renders the UI as expected 1`] = `
<div
  className="header"
>
  <div
    className="headerTop"
  >
    <img
      alt="Pokemon GO forum"
      className="banner"
      src="go-banner.png"
    />
    <div
      className="loginNav"
    >
      <div
        className="title"
      >
        Pokemon GO Forum
      </div>
      <div
        className="login-button"
      >
        <div
          className="Header__not-logged-in"
        >
          <a
            className="register-button"
            href="/register"
            onClick={[Function]}
          >
            Register
          </a>
           - 
          <a
            className="login-button"
            href="/login"
            onClick={[Function]}
          >
            Log in
          </a>
        </div>
      </div>
    </div>
  </div>
  <nav
    className="navBar"
  />
</div>
`;

exports[`renders the UI for Header as expected 1`] = `
<div
  className="header"
>
  <div
    className="headerTop"
  >
    <img
      alt="Pokemon GO forum"
      className="banner"
      src="go-banner.png"
    />
    <div
      className="loginNav"
    >
      <div
        className="title"
      >
        Pokemon GO Forum
      </div>
      <div
        className="login-button"
      >
        <div
          className="Header__not-logged-in"
        >
          <a
            className="register-button"
            href="/register"
            onClick={[Function]}
          >
            Register
          </a>
           - 
          <a
            className="login-button"
            href="/login"
            onClick={[Function]}
          >
            Log in
          </a>
        </div>
      </div>
    </div>
  </div>
  <nav
    className="navBar"
  />
</div>
`;
